# one-step-aws

./: .gitignore  CLAUDE.md  README.md  admin.html  download-link.html  downloader.html  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.downloader.ts  vite.config.ts
.github/workflows/: build.yml  deploy-downloader.yml
docs/plans/: 2026-02-25-onestep-aws-design.md  2026-02-25-onestep-aws-implementation.md
scripts/: generate-link.mjs  setup-cors.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  download_engine.rs  lib.rs  md5_engine.rs  s3_client.rs  state.rs  url_parser.rs
src/downloader/: App.tsx  main.tsx
src/downloader/lib/: download-engine.ts  file-system-access.d.ts  md5-utils.ts  s3-browser.ts  types.ts  url-parser.ts
src/downloader/pages/: DownloadProgress.tsx  FallbackDownload.tsx  PresignedDownload.tsx  ProjectInfo.tsx  StreamingDownload.tsx  VerifyResult.tsx
src/i18n/: en.json  index.ts  ja.json  zh.json
src/lib/: format.ts  tauri-api.ts
src/pages/: DownloadProgress.tsx  ProjectInfo.tsx  VerifyResult.tsx
