[package]
name = "onestep-aws"
version = "0.1.0"
description = "OneStepAWS - S3 Data Delivery Tool"
authors = ["LCY"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
md-5 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
log = "0.4"
